--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Author: Alexis Moins
+# Creation: 13 aoû 2021
+
+# Sets ˆQ as the new prefix
 unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
@@ -16,43 +20,50 @@ set -g default-terminal "screen-256color"
 set -g bell-action none
 
 set -g status-style fg=colour250,bg=colour234
-
 set -g status-position top
-set -g window-status-current-format "#W"
-set -g window-status-current-style fg=colour250
 
-set -g window-status-format "#W"
+# {{{ Windows
+
+set -g window-status-current-style fg=colour250
+set -g window-status-current-format "#[fg=colour6][#[default]#I#[fg=colour6]] #[default]#W"
+
+set -g window-status-format "#I #W"
 set -g window-status-style fg=colour240
+
+# }}}
 
 set -g message-style fg=colour250,bg=colour234
 
-set -g pane-border-style fg=colour234,bg=colour234
-set -g pane-active-border-style fg=colour234,bg=colour234
+set -g pane-border-style fg=colour240,bg=colour234
+set -g pane-active-border-style fg=colour240,bg=colour234
 
+# {{{ Keybindings
+
+# Use 'r' to source the tmux config file
 bind r source-file "~/.tmux.conf"
 
-bind -r < swap-window -d -t -1 
-bind -r > swap-window -d -t +1 
-
-unbind n
+# Use 'n' & 'p' to cycle through the available windows
 bind -r n next-window
-
-unbind p
 bind -r p previous-window
 
-unbind -
+# Use '-' to create a new horizontal pane
 bind - split-window -v -c "#{pane_current_path}"
 
-unbind |
+# Use '|' to create a new vertical pane
 bind | split-window -h -c "#{pane_current_path}"
 
+# Use 'h', 'j', 'k' & 'l' to change focus of pane
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Use 'J' & 'K' to move panes around
 bind -r J swap-pane -D
 bind -r K swap-pane -U
 
+# Use '<' & '>' to move windows around
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
+
+# }}}
