Changed installation script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,17 +34,21 @@ set -g window-status-style fg=colour240
 
 set -g message-style fg=colour250,bg=colour234
 
+# {{{ Panes
+
 set -g pane-border-style fg=colour240,bg=colour234
 set -g pane-active-border-style fg=colour240,bg=colour234
+
+# }}}
 
 # {{{ Keybindings
 
 # Use 'r' to source the tmux config file
 bind r source-file "~/.tmux.conf"
 
-# Use 'n' & 'p' to cycle through the available windows
+# Use 'n' & 'b' to cycle through the available windows
 bind -r n next-window
-bind -r p previous-window
+bind -r b previous-window
 
 # Use '-' to create a new horizontal pane
 bind - split-window -v -c "#{pane_current_path}"
