WIP: Transition commit

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,10 +13,11 @@
     # Starts a new local repository and perform initial commit
     this = !git init && git add . && git commmit -m "Initial commit"
     # Displays a better log
-    l = log --all --graph --oneline --decorate=short --branches='*' --tags='*'
+    ls = log --all --graph --oneline --decorate=short --branches='*' --tags='*'
     # Displays the status of the repository
     st = status
     #
     co = checkout
-    #
-    b = branch
+[diff]
+    # Use `vimdiff` as the diff interface
+	tool = vimdiff
