WIP: Python venv in zsh prompt, better gitconfig, refactored vim mappings

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,23 +1,29 @@
 [user]
-    # The default email
-    email = moinsalexis@gmail.com
     # The default name
     name = AlexisMoins
+    # The default email
+    email = moinsalexis@gmail.com
 [init]
     # Use 'main' as the default branch name
     defaultBranch = main
 [core]
-    # Use vim as the default editor
+    # Use `vim` as the default editor
     editor = vim
 [alias]
-    # Starts a new local repository and perform initial commit
-    this = !git init && git add . && git commmit -m "Initial commit"
-    # Displays a better log
-    ls = log --all --graph --oneline --decorate=short --branches='*' --tags='*'
-    # Displays the status of the repository
+    # Display the status of the repository
     st = status
-    #
+    # Checkout the branches of the repository
     co = checkout
+    # Display commits with a pretty formatting
+    ls = log --all --branches='*' --graph --tags='*'
+    # Start a new local repository and perform initial commit
+    this = "!git init && git add . && git commit --message='feat(*): Initial commit'"
+[color]
+    # Always allow colored output by default
+    ui = true
 [diff]
     # Use `vimdiff` as the diff interface
 	tool = vimdiff
+[format]
+    # Formatting used as default by the `--format` option
+    pretty = format:%C(auto)%h [%D] %C(brightblack)%an%C(reset) %s (%C(blue)%cs%C(reset))
