--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
 set -g status-left ""
-set -g status-right "#[fg=colour240]#S #[default]%H:%M "
+set -g status-right "#[fg=colour240]#S 📖 #[default]%H:%M "
 set -g status-interval 60
 
 set -g base-index 1
