--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g status-position top
 set -g window-status-current-style fg=colour250
 
 #
-set -g window-status-current-format "#[fg=colour6][#[default]#I#[fg=colour6]] #[default]#W"
+set -g window-status-current-format "#[fg=colour6](#[default]#I#[fg=colour6]) #[default]#W"
 
 # 
 set -g window-status-format "#I #W"
