--- a/.ssh/config
+++ b/.ssh/config
@@ -16,3 +16,16 @@ Host gitlab-ce.iut.bordeaux.fr
     # Link to the public key (ed25519)
     IdentityFile ~/.ssh/gitlab-ce
 
+# Connect to Bdx University IT Department 1st server
+Host bombarbe
+    # 
+    User amoins001
+    # Connect using this specific host
+    Hostname info-ssh1.iut.u-bordeaux.fr
+
+# Connect to Bdx University IT Department 2nd server
+Host biniou
+    # 
+    User amoins001
+    # Connect using this specific host
+    Hostname info-ssh2.iut.u-bordeaux.fr
