--- a/.ssh/config
+++ b/.ssh/config
@@ -4,11 +4,11 @@ Host github.com
     Hostname github.com
     # Use the public key to identify
     PreferredAuthentications publickey
-    # Link to the public key (rsa)
+    # Link to the public key (ed25519)
     IdentityFile ~/.ssh/github
 
 # Connect to the gitlab account provided by the Bdx University
-Host gitlab-ce.iut.bordeaux.fr
+Host gitlab-ce.iut.u-bordeaux.fr
     # Connect using this specific host
     Hostname gitlab-ce.iut.bordeaux.fr
     # Use the public key to identify
@@ -18,14 +18,14 @@ Host gitlab-ce.iut.bordeaux.fr
 
 # Connect to Bdx University IT Department 1st server
 Host bombarbe
-    # 
+    # Username used to connect to the server
     User amoins001
     # Connect using this specific host
     Hostname info-ssh1.iut.u-bordeaux.fr
 
 # Connect to Bdx University IT Department 2nd server
 Host biniou
-    # 
+    # Username used to connect to the server
     User amoins001
     # Connect using this specific host
     Hostname info-ssh2.iut.u-bordeaux.fr
