--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,25 +22,25 @@ set -g bell-action none
 set -g status-style fg=colour250,bg=colour234
 set -g status-position top
 
-# {{{ Windows
+# +-- Windows
 
 #
 set -g window-status-current-style fg=colour250
 
 #
-set -g window-status-current-format "#[fg=colour6](#[default]#I#[fg=colour6]) #[default]#W"
+set -g window-status-current-format "#[fg=colour6](#[default]#I#[fg=colour6])#[default] #W"
 
 # 
-set -g window-status-format "#I #W"
+set -g window-status-format " #I. #W"
 
 #
 set -g window-status-style fg=colour240
 
-# }}}
+# --+
 
 set -g message-style fg=colour250,bg=colour234
 
-# {{{ Panes
+# +-- Panes
 
 # Colour of the inactive pane border
 set -g pane-border-style fg=colour240,bg=colour234
@@ -48,9 +48,9 @@ set -g pane-border-style fg=colour240,bg=colour234
 # Colour of the active pane border
 set -g pane-active-border-style fg=colour240,bg=colour234
 
-# }}}
+# --+
 
-# {{{ Keybindings
+# +-- Keybindings
 
 # Use 'r' to source the tmux config file
 bind r source-file "~/.tmux.conf"
@@ -79,4 +79,4 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-# }}}
+# --+
