--- a/.gitconfig
+++ b/.gitconfig
@@ -60,6 +60,8 @@
     mt = mergetool
     # Add currently staged files to the last commit without changing its message
     amend = commit --amend --no-edit
+    # Apply the .gitignore file to all files in the repo
+    ignore = !git rm -r --cached . && git add .
     # Display commits with a pretty formatting
     ls = log --all --branches='*' --graph --tags='*'
     # Start a new local repository and perform initial commit
