--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ set -g pane-active-border-style fg=colour240,bg=colour234
 # +-- Keybindings
 
 # Use 'r' to source the tmux config file
-bind r source-file "~/.tmux.conf"
+bind r source-file "${HOME}/.tmux.conf"
 
 # Use 'n' & 'p' to cycle through the available windows
 bind -r n next-window
