feat(*): added a bunch of visual changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,21 +6,25 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
+# +-- Misc
+
 set -g status-left ""
 set -g status-right "#[fg=colour240]#S 📖 #[default]%H:%M "
-set -g status-interval 60
 
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 
-set -g mode-style fg=default,bg=colour240
+set -g status-interval 60
+set -g mode-style fg=colour7,bg=colour0
 
 set -g default-terminal "screen-256color"
 set -g bell-action none
 
-set -g status-style fg=colour250,bg=colour0
 set -g status-position top
+set -g status-style fg=colour250,bg=colour0
+
+# --+
 
 # +-- Windows
 
@@ -28,7 +32,7 @@ set -g status-position top
 set -g window-status-current-style fg=colour250
 
 #
-set -g window-status-current-format "#[fg=colour6][#[default]#I #W#[fg=colour6]]#[default]"
+set -g window-status-current-format "#[fg=colour6](#[fg=colour7]#I #W#[fg=colour6])#[fg=colour7]"
 
 # 
 set -g window-status-format " #I #W "
@@ -41,10 +45,10 @@ set -g window-status-style fg=colour240
 # +-- Panes
 
 # Colour of the inactive pane border
-set -g pane-border-style fg=colour240,bg=colour0
+set -g pane-border-style fg=colour0,bg=colour0
 
 # Colour of the active pane border
-set -g pane-active-border-style fg=colour240,bg=colour0
+set -g pane-active-border-style fg=colour0,bg=colour0
 
 # --+
 
