--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # Author: Alexis Moins
 # Creation: 13 aoû 2021
+# vim: fdm=marker
 
 # Sets ˆQ as the new prefix
 unbind C-b
@@ -9,7 +10,7 @@ bind-key 'C-q' send-prefix
 # +-- Misc
 
 set -g status-left ""
-set -g status-right "#[fg=colour240]#S 📖 #[default]%H:%M "
+set -g status-right "#[fg=colour15]#S 📖 #[default]%H:%M "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -22,14 +23,14 @@ set -g default-terminal "screen-256color"
 set -g bell-action none
 
 set -g status-position top
-set -g status-style fg=colour250,bg=colour0
+set -g status-style fg=colour7,bg=colour0
 
 # --+
 
 # +-- Windows
 
 #
-set -g window-status-current-style fg=colour250
+set -g window-status-current-style fg=colour7
 
 #
 set -g window-status-current-format "#[fg=colour6](#[fg=colour7]#I #W#[fg=colour6])#[fg=colour7]"
@@ -38,7 +39,7 @@ set -g window-status-current-format "#[fg=colour6](#[fg=colour7]#I #W#[fg=colour
 set -g window-status-format " #I #W "
 
 #
-set -g window-status-style fg=colour240
+set -g window-status-style fg=colour15
 
 # --+
 
@@ -66,6 +67,11 @@ bind - split-window -v -c "#{pane_current_path}"
 
 # Use '|' to create a new vertical pane
 bind | split-window -h -c "#{pane_current_path}"
+
+# 
+bind m split-window -h -c "#{pane_current_path}" -l 40% "make | less"
+#
+bind t split-window -h -c "#{pane_current_path}" -l 30% "vim ."
 
 # Use 'h', 'j', 'k' & 'l' to change focus of pane
 bind h select-pane -L
