--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ bind-key 'C-q' send-prefix
 # +-- Misc
 
 set -g status-left ""
-set -g status-right "#[fg=colour15]#S 📖 #[default]%H:%M "
+set -g status-right "#[fg=colour5]{#S} 📖 #[fg=colour15]%H:%M "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -33,7 +33,7 @@ set -g status-style fg=colour7,bg=colour0
 set -g window-status-current-style fg=colour7
 
 #
-set -g window-status-current-format "#[fg=colour6](#[fg=colour7]#I #W#[fg=colour6])#[fg=colour7]"
+set -g window-status-current-format "#[fg=colour10] #I #W #[fg=colour6]"
 
 # 
 set -g window-status-format " #I #W "
