Slowly migrating to stow

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ set -g mode-style fg=colour7,bg=colour0
 set -g default-terminal "screen-256color"
 set -g bell-action none
 
-set -g status-position top
+set -g status-position bottom
 set -g status-style fg=colour7,bg=colour0
 
 # --+
@@ -69,7 +69,7 @@ bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
 # 
-bind m split-window -h -c "#{pane_current_path}" -l 40% "make | less"
+bind m split-window -h -c "#{pane_current_path}" -l 40% "make run | less"
 #
 bind t split-window -h -c "#{pane_current_path}" -l 30% "vim ."
 
