feat(*): Started using plugins and coc extensions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,11 +62,16 @@ bind r source-file "${HOME}/.tmux.conf"
 bind -r n next-window
 bind -r p previous-window
 
-# Use '-' to create a new horizontal pane
-bind - split-window -v -c "#{pane_current_path}"
+bind = select-layout even-horizontal
 
-# Use '|' to create a new vertical pane
-bind | split-window -h -c "#{pane_current_path}"
+unbind z
+bind z resize-pane -Z
+
+# Create a new horizontal pane
+bind s split-window -v -c "#{pane_current_path}"
+
+# Create a new vertical pane
+bind v split-window -h -c "#{pane_current_path}"
 
 # 
 bind m split-window -h -c "#{pane_current_path}" -l 40% "make run | less"
