wip: Getting changes to mini

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# +-- Misc
+# Misc {{{
 
 set -g status-left ""
 set -g status-right "#[fg=colour5]{#S} 📖 #[fg=colour15]%H:%M "
@@ -25,9 +25,9 @@ set -g bell-action none
 set -g status-position bottom
 set -g status-style fg=colour7,bg=colour0
 
-# --+
+# }}}
 
-# +-- Windows
+# {{{
 
 #
 set -g window-status-current-style fg=colour7
@@ -41,9 +41,9 @@ set -g window-status-format " #I #W "
 #
 set -g window-status-style fg=colour15
 
-# --+
+# }}}
 
-# +-- Panes
+# Panes {{{
 
 # Colour of the inactive pane border
 set -g pane-border-style fg=colour0,bg=colour0
@@ -51,9 +51,9 @@ set -g pane-border-style fg=colour0,bg=colour0
 # Colour of the active pane border
 set -g pane-active-border-style fg=colour0,bg=colour0
 
-# --+
+# }}}
 
-# +-- Keybindings
+# Keybindings {{{
 
 # Use 'r' to source the tmux config file
 bind r source-file "${HOME}/.tmux.conf"
@@ -92,4 +92,4 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-# --+
+# }}}
