--- a/brewfile
+++ b/brewfile
@@ -1,87 +1,22 @@
-# Creation: 09 aoû 2021
-# Author: Alexis Moins
-# vim: ft=brew syn=ruby
-
-# +-- Taps
-
-# Core formulae for the Homebrew package manager
-tap 'homebrew/core'
-
-# A CLI workflow for the administration of macOS applications distributed as binaries
-tap 'homebrew/cask'
-
-# Bundler for non-Ruby dependencies from Homebrew, Homebrew Cask and the Mac App Store
-tap 'homebrew/bundle'
-
-# Casks of fonts
-tap 'homebrew/cask-fonts'
-
-# --+
-
-# +-- Formulae
-
-# Distributed revision control system
-brew 'git'
-
-# Vi `workalike` with many additional features
-brew 'vim'
-
-# UNIX shell (command interpreter)
-brew 'zsh'
-
-# Terminal multiplexer
-brew 'tmux'
-
-# 
-brew 'stow'
-
-# Display directories as trees (with optional color/HTML output)
-brew 'tree'
-
-# Reimplementation of ctags(1)
-brew 'ctags'
-
-# Python version management
-brew 'pyenv'
-
-# Development kit for the Java programming language 
-brew 'java'
-
-# Static analysis and lint tool, for (ba)sh scripts
-brew 'shellcheck'
-
-# Dynamic, general-purpose programming language
-# brew 'clojure'
-
-# Build tool for clojure
-# brew 'leiningen'
-
-# Platform built on V8 to build network applications
-brew 'node'
-
-# --+
-
-# +-- Casks
-
-# Multimedia player
-cask 'vlc'
-
-# Memory training application
-cask 'anki'
-
-# Voice and text chat software
-cask 'discord'
-
-# Open-source, self-hosted Slack-alternative
-cask 'mattermost'
-
-# Monospaced font with programming ligatures
-cask 'font-fira-code'
-
-# Compact TeX distribution as alternative to the full TeX Live / MacTeX
-# cask 'basictex'
-
-# Move and resize windows using keyboard shortcuts or snap areas
-cask 'rectangle'
-
-# --+
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
+tap "homebrew/core"
+brew "ctags"
+brew "fzf"
+brew "git"
+brew "node"
+brew "openjdk"
+brew "pyenv"
+brew "shellcheck"
+brew "stow"
+brew "tmux"
+brew "vim"
+brew "zsh"
+brew "zsh-syntax-highlighting"
+cask "anki"
+cask "discord"
+cask "font-fira-code"
+cask "mattermost"
+cask "rectangle"
+cask "vlc"
