wip: Rewriten colorscheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,10 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# Misc {{{
+# +-- Misc
 
 set -g status-left ""
-set -g status-right "#[fg=colour5]{#S} 📖 #[fg=colour15]%H:%M "
+set -g status-right "#[fg=colour8]%H:%M 📖 #[fg=colour11][#S]  "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -20,20 +20,22 @@ set -g status-interval 60
 set -g mode-style fg=colour7,bg=colour0
 
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
 set -g bell-action none
 
 set -g status-position bottom
 set -g status-style fg=colour7,bg=colour0
 
-# }}}
+# --+
 
-# {{{
-
-#
-set -g window-status-current-style fg=colour7
+# +-- Windows
 
 #
-set -g window-status-current-format "#[fg=colour10] #I #W #[fg=colour6]"
+set -g window-status-current-style fg=colour8
+
+#
+set -g window-status-current-format "#[fg=colour11] #I #W #[fg=colour8]"
 
 # 
 set -g window-status-format " #I #W "
@@ -41,9 +43,9 @@ set -g window-status-format " #I #W "
 #
 set -g window-status-style fg=colour15
 
-# }}}
+# --+
 
-# Panes {{{
+# +-- Panes
 
 # Colour of the inactive pane border
 set -g pane-border-style fg=colour0,bg=colour0
@@ -51,9 +53,9 @@ set -g pane-border-style fg=colour0,bg=colour0
 # Colour of the active pane border
 set -g pane-active-border-style fg=colour0,bg=colour0
 
-# }}}
+# --+
 
-# Keybindings {{{
+# +-- Keybindings
 
 # Use 'r' to source the tmux config file
 bind r source-file "${HOME}/.tmux.conf"
@@ -92,4 +94,4 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-# }}}
+# --+
