--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g window-status-current-style fg=colour8
 set -g window-status-current-format "#[fg=colour11] #I #W #[fg=colour8]"
 
 # 
-set -g window-status-format " #I #W "
+set -g window-status-format "#[fg=colour8] #I #W "
 
 #
 set -g window-status-style fg=colour15
