--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,16 @@
+# tmux configuration
 # Author: Alexis Moins
 # Creation: 13 aoû 2021
-# vim: fdm=marker
 
 # Sets ˆQ as the new prefix
 unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# +-- Misc
+# {{{ Misc
 
 set -g status-left ""
-set -g status-right "#[fg=colour8]%H:%M 📖 #[fg=colour11][#S]  "
+set -g status-right "#[fg=colour8]%H:%M 📖 #[fg=colour5][#S]  "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -27,25 +27,22 @@ set -g bell-action none
 set -g status-position bottom
 set -g status-style fg=colour7,bg=colour0
 
-# --+
+# }}}
 
-# +-- Windows
-
-#
-set -g window-status-current-style fg=colour8
+# {{{ Windows
 
 #
-set -g window-status-current-format "#[fg=colour11] #I #W #[fg=colour8]"
-
+# set -g window-status-current-style fg=colour8
+#
+set -g window-status-current-format "#[fg=colour2] #I #W #[fg=colour8]"
+#
+set -g window-status-style fg=colour8
 # 
-set -g window-status-format "#[fg=colour8] #I #W "
+set -g window-status-format " #I #W "
 
-#
-set -g window-status-style fg=colour15
+# }}}
 
-# --+
-
-# +-- Panes
+# {{{ Panes
 
 # Colour of the inactive pane border
 set -g pane-border-style fg=colour0,bg=colour0
@@ -53,9 +50,9 @@ set -g pane-border-style fg=colour0,bg=colour0
 # Colour of the active pane border
 set -g pane-active-border-style fg=colour0,bg=colour0
 
-# --+
+# }}}
 
-# +-- Keybindings
+# {{{ Keybindings
 
 # Use 'r' to source the tmux config file
 bind r source-file "${HOME}/.tmux.conf"
@@ -75,11 +72,6 @@ bind s split-window -v -c "#{pane_current_path}"
 # Create a new vertical pane
 bind v split-window -h -c "#{pane_current_path}"
 
-# 
-bind m split-window -h -c "#{pane_current_path}" -l 40% "make run | less"
-#
-bind t split-window -h -c "#{pane_current_path}" -l 30% "vim ."
-
 # Use 'h', 'j', 'k' & 'l' to change focus of pane
 bind h select-pane -L
 bind j select-pane -D
@@ -94,4 +86,4 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-# --+
+# }}}
