wip: Added README.md, transferred syntax stuff from .vim/after/syntax to new colorscheme

--- a/.ssh/config
+++ b/.ssh/config
@@ -14,7 +14,7 @@ Host github.com
 # Connect to the gitlab account provided by the Bdx University
 Host gitlab-ce.iut.u-bordeaux.fr
     # Connect using this specific host
-    Hostname gitlab-ce.iut.bordeaux.fr
+    Hostname gitlab-ce.iut.u-bordeaux.fr
     # Use the public key to identify
     PreferredAuthentications publickey
     # Link to the public key (ed25519)
