--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,47 +7,34 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# {{{ Misc
+# {{{ UI
+
+set -g status-position bottom
+set -g status-style fg=colour8,bg=colour0
 
 set -g status-left ""
-set -g status-right "#[fg=colour8]%H:%M 📖 #[fg=colour5][#S]  "
+set -g status-interval 60
+set -g status-right "%H:%M 📖 #[fg=colour5][#S]  "
 
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 
-set -g status-interval 60
-set -g mode-style fg=colour7,bg=colour0
-
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
 set -g bell-action none
-
-set -g status-position bottom
-set -g status-style fg=colour7,bg=colour0
+set -g message-style fg=colour1
+set -g default-terminal "screen-256color"
 
 # }}}
 
-# {{{ Windows
+# {{{ Formats
 
-#
-# set -g window-status-current-style fg=colour8
-#
-set -g window-status-current-format "#[fg=colour2] #I #W #[fg=colour8]"
-#
 set -g window-status-style fg=colour8
-# 
-set -g window-status-format " #I #W "
+set -g window-status-format "  #I #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
-# }}}
+set -g window-status-current-style fg=colour8
+set -g window-status-current-format "  #I #W#[fg=colour2]###{?window_zoomed_flag,Z, }"
 
-# {{{ Panes
-
-# Colour of the inactive pane border
 set -g pane-border-style fg=colour0,bg=colour0
-
-# Colour of the active pane border
 set -g pane-active-border-style fg=colour0,bg=colour0
 
 # }}}
