--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,11 +9,10 @@ bind-key 'C-q' send-prefix
 
 # {{{ UI
 
-set -g status-position bottom
-set -g status-style fg=colour8,bg=colour0
-
 set -g status-left ""
 set -g status-interval 60
+
+set -g status-style fg=colour8,bg=colour0
 set -g status-right "%H:%M 📖 #[fg=colour5][#S]  "
 
 set -g base-index 1
@@ -29,10 +28,10 @@ set -g default-terminal "screen-256color"
 # {{{ Formats
 
 set -g window-status-style fg=colour8
-set -g window-status-format "  #I #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "  #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour8
-set -g window-status-current-format "  #I #W#[fg=colour2]###{?window_zoomed_flag,Z, }"
+set -g window-status-current-format "  #W#[fg=colour2]!#{?window_zoomed_flag,Z, }"
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
