--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,13 +7,12 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# {{{ UI
-
+# UI
 set -g status-left ""
 set -g status-interval 60
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M 📖 #[fg=colour5][#S]  "
+set -g status-right "%H:%M 📖 #[fg=colour5][#S] "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -23,23 +22,17 @@ set -g bell-action none
 set -g message-style fg=colour1
 set -g default-terminal "screen-256color"
 
-# }}}
-
-# {{{ Formats
-
+# Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "  #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format " #I #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour8
-set -g window-status-current-format "  #W#[fg=colour2]!#{?window_zoomed_flag,Z, }"
+set -g window-status-current-format " #I #W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
 
-# }}}
-
-# {{{ Keybindings
-
+# Keybindings
 # Use 'r' to source the tmux config file
 bind r source-file "${HOME}/.tmux.conf"
 
@@ -72,4 +65,3 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-# }}}
