--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
+# Path to the shell for creating windows
+set -g default-command "/opt/homebrew/bin/zsh"
+
 # UI
 set -g status-left ""
 set -g status-interval 60
@@ -27,7 +30,7 @@ set -g window-status-style fg=colour8
 set -g window-status-format " #I #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour8
-set -g window-status-current-format " #I #W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
+set -g window-status-current-format " #[fg=colour2]#I #[fg=default]#W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
