--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,15 @@ unbind C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
-# Path to the shell for creating windows
-set -g default-command "/opt/homebrew/bin/zsh"
+# Force tmux to open login shells and source .zprofile
+set -g default-command "zsh --login"
 
-# UI
+# Vi mode
+set -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+# Statusline and stuff
 set -g status-left ""
 set -g status-interval 60
 
@@ -23,6 +28,7 @@ set -g renumber-windows on
 
 set -g bell-action none
 set -g message-style fg=colour1
+set -g mode-style bg=colour15
 set -g default-terminal "screen-256color"
 
 # Formats
