fix: Cleaned scripts, added back vim-plug itegration

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Misc
 TODO
 tags
-.cache
 .DS_Store
 
 # Zsh
@@ -11,9 +10,7 @@ tags
 
 # Vim
 *.swp
-pack/
-.viminfo
-session.vim
+.vim-session
 
 # Brew
 Brewfile.lock.json
