--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ bind-key 'C-q' send-prefix
 
 # Force tmux to open login shells and source .zprofile
 set -g default-command "zsh --login"
+set -g mouse on
 
 # Vi mode
 set -g mode-keys vi
