feat: changes tmux UI and python venv display prompt

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,10 +34,10 @@ set -g default-terminal "screen-256color"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format " #I #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format " #W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour8
-set -g window-status-current-format " #[fg=colour2]#I #[fg=default]#W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
+set -g window-status-current-format " #[fg=default]#W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
@@ -75,3 +75,7 @@ bind -r K swap-pane -U
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
+
+# Fig Tmux Integration: Enabled
+source-file ~/.fig/tmux
+# End of Fig Tmux Integration
