feat: ✏️  changed zsh completion menu (colors)

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ set -g status-left ""
 set -g status-interval 60
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M 📖 #[fg=colour5][#S] "
+set -g status-right "%H:%M 🎯 #[fg=colour5][#S] "
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -74,8 +74,3 @@ bind -r K swap-pane -U
 # Use '<' & '>' to move windows around
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
-
-
-# Fig Tmux Integration: Enabled
-source-file ~/.fig/tmux
-# End of Fig Tmux Integration
