--- a/tmux.conf
+++ b/tmux.conf
@@ -11,17 +11,21 @@ bind-key 'C-q' send-prefix
 set -g default-command "zsh --login"
 set -g mouse on
 
+set -g escape-time 10
+# To work with (neo)vim autoread option
+set -g focus-events on
+
 # Vi mode
 set -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
 # Statusline and stuff
 set -g status-left ""
 set -g status-interval 60
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M 🎯 #[fg=colour5][#S] "
+set -g status-right "%H:%M #[fg=colour5][#S]"
 
 set -g base-index 1
 set -g pane-base-index 1
