--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,12 +7,16 @@
 - clean: ['~', '~/.config']
 
 - link:
-    ~/.ssh/config:
+    ~/.ssh/config: ssh/config
     ~/.gitconfig:
     ~/.tmux.conf:
     ~/.config: config/*
     ~/.zshenv:
+    ~/.hyper.js:
 
 - shell:
-  - cp hyper.js ~/.hyper.js
+  - brew bundle install
   - git submodule update --init --recursive
+
+# - npm install --global typescript-language-server
+# - cp hyper.js ~/.hyper.js
