feat: env cleanup

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,10 +2,10 @@
 # Author: Alexis Moins
 # Creation: 13 aoû 2021
 
-# Sets ˆQ as the new prefix
+# Sets ˆO as the new prefix
 unbind C-b
-set -g prefix 'C-q'
-bind-key 'C-q' send-prefix
+set -g prefix 'C-o'
+bind-key 'C-o' send-prefix
 
 # Force tmux to open login shells and source .zprofile
 set -g default-command "zsh --login"
