--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,16 @@
 .vim-session
 .zsh_history
 
+# fish:
+# exclude the completions and functions folder as they get
+# filled by elements from fish plugins
+**/fish/conf.d
+**/fish/completions
+**/fish/functions/*
+
+# But still keep these files:
+!**/fish/functions/fish_*
+
+
 # Directories
-nvim/plugins/
 .zsh_sessions/
