--- a/tmux.conf
+++ b/tmux.conf
@@ -22,9 +22,10 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 # Statusline and stuff
 set -g status-left ""
 set -g status-interval 60
+set -g status-position top
 
-set -g status-style fg=colour7,bg=colour0
-set -g status-right "%H:%M #[fg=colour5][#S]"
+set -g status-style fg=colour8,bg=colour0
+set -g status-right "%H:%M #[fg=colour5]#S"
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -37,10 +38,10 @@ set -g default-terminal "screen-256color"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format " (#W)#[fg=colour3]#F"
+set -g window-status-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g window-status-current-style fg=colour8
-set -g window-status-current-format " (#[fg=default]#W)#[fg=colour3]#F"
+set -g window-status-current-format "#[fg=default]#W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
