--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,12 +23,20 @@
     ~/.config/:
       glob: true
       path: config/*
-      # exclude: [ config/Code ]
+      exclude: [ config/vim ]
+    ~/.vim:
+      path: config/vim
 
 - create:
     - ~/projects
     - ~/.vim/undo-history
 
 - shell:
-  - [ brew bundle, Installing packages ]
-  - [ git submodule update --init --recursive, Installing submodules ]
+  - [ brew bundle, Installing brew packages ]
+  - [ vim +PlugInstall +qa, Installing vim plugins ]
+  - [ git submodule update --init --recursive, Updating git submodules ]
+
+- pipx:
+    file: requirements-pipx.txt
+    stdout: false
+    stderr: true
