--- a/tmux.conf
+++ b/tmux.conf
@@ -7,12 +7,11 @@ unbind C-b
 set -g prefix 'C-o'
 bind-key 'C-o' send-prefix
 
-# Force tmux to open login shells and source .zprofile
-set -g mouse on
-
-set -g escape-time 10
 # To work with (neo)vim autoread option
+set -g escape-time 10
 set -g focus-events on
+
+set -g mouse off
 
 # Vi mode
 set -g mode-keys vi
@@ -25,7 +24,7 @@ set -g status-interval 60
 set -g status-position top
 
 set -g status-style fg=colour8,bg=colour0
-set -g status-right "%H:%M #[fg=colour5]#S"
+set -g status-right "%H:%M #[fg=colour5](#S)"
 
 set -g base-index 1
 set -g pane-base-index 1
