--- a/tmux.conf
+++ b/tmux.conf
@@ -39,10 +39,10 @@ set -g default-terminal "screen-256color"
 
 # Formats
 set -g window-status-style fg=colour8
-set -g window-status-format "#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
+set -g window-status-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
-set -g window-status-current-style fg=colour8
-set -g window-status-current-format "#[fg=default]#W#[fg=colour2]*#{?window_zoomed_flag,Z, }"
+set -g window-status-current-style fg=colour7
+set -g window-status-current-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
 set -g pane-border-style fg=colour0,bg=colour0
 set -g pane-active-border-style fg=colour0,bg=colour0
@@ -79,3 +79,5 @@ bind -r K swap-pane -U
 # Use '<' & '>' to move windows around
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
+
+bind -r S run-shell "fish --command tmux-switch"
