--- a/tmux.conf
+++ b/tmux.conf
@@ -12,9 +12,15 @@ set -g escape-time 10
 set -g focus-events on
 
 set -g mouse off
+set -g cursor-style blinking-bar
+
+set -g popup-border-lines rounded
+set -g popup-border-style fg=colour3
 
 # Vi mode
 set -g mode-keys vi
+set -g copy-mode-mark-style fg=colour0,bg=colour15
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
@@ -32,9 +38,11 @@ set -g renumber-windows on
 
 set -g bell-action none
 set -g message-style fg=colour1
-set -g mode-style bg=colour15
+set -g mode-style fg=colour1
 
+# tell Tmux that outside terminal supports true color
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 
 # Formats
@@ -44,8 +52,8 @@ set -g window-status-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 set -g window-status-current-style fg=colour7
 set -g window-status-current-format "#I:#W#{?window_zoomed_flag,#[fg=colour2]Z, } "
 
-set -g pane-border-style fg=colour0,bg=colour0
-set -g pane-active-border-style fg=colour0,bg=colour0
+set -g pane-border-style fg=colour8,bg=colour0
+set -g pane-active-border-style fg=colour8,bg=colour0
 
 # Keybindings
 # Use 'r' to source the tmux config file
@@ -72,12 +80,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Use 'J' & 'K' to move panes around
-bind -r J swap-pane -D
-bind -r K swap-pane -U
-
 # Use '<' & '>' to move windows around
 bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
-bind -r S run-shell "fish --command tmux-switch"
+bind o run-shell "fish --command tmux-open"
+bind S run-shell "fish --command tmux-switch"
+bind -r ^ last-window
